--- a/_sass/_banner.scss
+++ b/_sass/_banner.scss
@@ -64,7 +64,7 @@
 
 .Banner-subtitle {
   letter-spacing: 1px;
-  color: darken(#d5e9ed, 35%);
+  color: rgba(0, 0, 0, 0.5);
 }
 
 .Banner-cta-button {
