--- a/_sass/_home.scss
+++ b/_sass/_home.scss
@@ -1,9 +1,7 @@
 .Home {}
 
-.Home-register {
-  margin: 0 0 40px;
-  padding: 20px;
-  overflow: hidden;
+.Home-quote {
+  padding: 20px 0;
   background-color: lighten(#d5e8ed, 5%);
 }
 
