--- a/_includes/home.html
+++ b/_includes/home.html
@@ -45,23 +45,8 @@
     </div>
   </section>
   <div class="row">
-    <div class="col-sm-12 text-xs-center Home-register">
-      <div class="row">
-        <div class="col-md-7 offset-md-1">
-          <h4 style="line-height: 49px;margin:0">
-            Join us this {{site.conference_dates}} in {{site.conference_location}}
-          </h4>
-        </div>
-        <div class="col-md-3">
-          <a class="btn btn-lg btn-primary"
-            href="https://www.eventbrite.com/e/medical-device-security-101-conference-tickets-27465381696">Register Now</a>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="row">
     <div class="col-sm-12">
-      <div class="row">
+      <div class="row Home-quote">
         <div class="col-sm-2">
           <img src="/images/mike-ahmadi.jpg" class="img-fluid">
         </div>
