--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -15,7 +15,7 @@
       <div class="col-sm-3">
         <p>
         Play it safe. Stay informed.<br/>
-        <a href="#newsletter" data-toggle="modal">Sign up to our newsletter</a> for monthly news, research, and interviews.
+        <a href="#newsletter" data-toggle="modal">Sign up for our newsletter</a> for monthly news, research, and interviews.
         </p>
       </div>
       <div class="col-sm-4">
