Add sponsors to schedule.

--- a/_layouts/schedule.html
+++ b/_layouts/schedule.html
@@ -35,6 +35,7 @@ layout: default
       {% for presentation in blocks %}
         {% assign speaker = speakers | where_exp: 'item', 'item.title
         contains presentation.speaker' | first %}
+        {% assign sponsor = site.sponsors | where_exp: 'sponsor', 'sponsor.title contains presentation.sponsor' | first %}
         <div class="row">
           <div class="col-sm-12 Schedule-block
             {% if presentation.is_break %}
@@ -47,6 +48,12 @@ layout: default
               <div class="col-sm-2">
                 {% if presentation.speaker != '' and presentation.is_break == false %}
                   <img src="{{speaker.speaker_image}}" class="img-fluid" title="{{speaker.title}}">
+                {% endif %}
+                {% if presentation.sponsor %}
+                  <a href="{{sponsor.sponsor_website}}">
+                    <img src="{{sponsor.sponsor_logo}}"
+                    class="img-fluid" title="{{sponsor.title}}">
+                  </a>
                 {% endif %}
               </div>
               <div class="col-sm-8">
