--- a/_sass/_schedule.scss
+++ b/_sass/_schedule.scss
@@ -37,3 +37,9 @@
 .Schedule-divider {
   border-top: 3px solid #ccc;
 }
+
+.Presentation-time {
+  margin-bottom: 20px;
+  padding-bottom: 15px;
+  border-bottom: 1px solid #ccc;
+}
