--- a/_includes/speaker.html
+++ b/_includes/speaker.html
@@ -1,8 +1,10 @@
 <div class="row">
   <div class="col-sm-12 Speaker">
     <div class="col-sm-3">
-      <img src="{{include.speaker.speaker_image}}" class="img-fluid"
-      title="{{include.speaker.title}}">
+      {% if include.speaker.speaker_image != '' %}
+        <img src="{{include.speaker.speaker_image}}" class="img-fluid"
+        title="{{include.speaker.title}}">
+      {% endif %}
     </div>
     <div class="col-sm-9">
       <h6>
