--- a/_layouts/schedule.html
+++ b/_layouts/schedule.html
@@ -65,6 +65,8 @@ layout: default
                           {% include
                             presentation.html
                             presentation_title=block.presentation
+                            time=block.time
+                            location="Health Delivery Organizations - Asbury Hall: A & B"
                             is_track=true
                           %}
                         </div>
@@ -84,6 +86,8 @@ layout: default
                           {%
                             include presentation.html
                             presentation_title=block.presentation
+                            time=block.time
+                            location="Manufacturers - Asbury Hall: C & D"
                             is_track=true
                           %}
                         </div>
