Update some headshots and homepage paragraph.

--- a/_includes/home.html
+++ b/_includes/home.html
@@ -8,11 +8,16 @@
       business that you recognize the security threats facing the healthcare
       industry and have a plan in place to prevent them.
       </p>
-      <p>The <strong>Medical Device Security 101 Conference</strong>, hosted by
-      the University of Michigan’s <a href="https://www.secure-medicine.org/">Archimedes Center for Medical Device
-        Security</a>, is a 2-day educational workshop for medical device
-      manufacturers, industry regulators, and healthcare providers to learn and
-      speak frankly about medical device security threats and solutions.</p>
+      <p>
+      The <strong>Medical Device Security 101 Conference</strong>, hosted by the
+      University of Michigan’s <a
+        href="https://www.secure-medicine.org/">Archimedes Center for Medical
+        Device Security</a>, is
+      a 2-day educational workshop taking place in Lake Buena Vista, Florida
+      from January 15-17, 2017 for medical device manufacturers, industry
+      regulators, and healthcare providers to learn and speak frankly about
+      medical device security threats and solutions.
+      </p>
       <p><a href="https://www.eventbrite.com/e/medical-device-security-101-conference-tickets-27465381696">Register today for direct access to leading security experts</a> who will
       teach you how to identify, prevent, and recover from cybersecurity attacks
       so that you, your clients, and your patients can rest secure.</p>
