--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -14,7 +14,7 @@
       <div>
         {% if include.url == '/' %}
           <h1 class="Banner-title">{{site.title}}</h1>
-          <h4 class="Banner-subtitle">Improve your medical device security with advice from the experts</h4>
+          <h4 class="Banner-subtitle">Early bird rate closes <span class="text-danger">Nov 7</span></h4>
           {% include
             button.html
             label="Register Now"
