Move the home banner text into the site config.

--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -14,8 +14,7 @@
       <div>
         {% if include.url == '/' %}
           <h1 class="Banner-title">{{site.title}}</h1>
-          <h4 class="Banner-subtitle">Early bird rate closes <span
-              class="text-danger">Nov 14</span></h4>
+          <h4 class="Banner-subtitle">{{site.home_banner_dates}}</h4>
           {% include
             button.html
             label="Register Now"
