--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -22,24 +22,7 @@
       <div class="col-sm-3">
         <h2 class="Footer-title">Play it safe. Stay informed.</h2>
         <p>Sign up for monthly news, research, and interviews.</p>
-        <!--[if lte IE 8]>
-        <script charset="utf-8" type="text/javascript" src="//js.hsforms.net/forms/v2-legacy.js"></script>
-        <![endif]-->
-        <script charset="utf-8" type="text/javascript" src="//js.hsforms.net/forms/v2.js"></script>
-        <script>
-          hbspt.forms.create({
-            portalId: '2312887',
-            formId: '0aba9475-1409-4ad4-87f1-30370bc575f7',
-            onFormReady: function ($form) {
-              $form.find('.hs-button')
-                  .attr('class', '')
-                  .addClass('btn')
-                  .addClass('btn-primary');
-            },
-            onFormSubmit: function ($form, ctx){
-            }
-          });
-        </script>
+        <a href="/newsletter" class="btn btn-primary">Subscribe</a>
       </div>
     </div>
   </div>
