Copy changes and fix broken link.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,7 +3,8 @@
     <div class="row">
       <div class="col-sm-8">
         <h2 class="Footer-title" style="margin-bottom: 20px;">
-        For questions about the event, or for information on how to become a sponsor, please email <a href="mailto:archimedes@umich.edu">archimedes@umich.edu</a>
+          For information about sponsorship, individual discounts, or group rates,
+          please email <a href="mailto:archimedes@umich.edu">archimedes@umich.edu</a>
         </h2>
         <div class="row">
           <div class="col-sm-2">
